--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.475.0",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.4.4",
     "postcss": "^8.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
